--- a/src/main/webapp/templates/header-snippet.xhtml
+++ b/src/main/webapp/templates/header-snippet.xhtml
@@ -4,10 +4,10 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-	<p:panel toggleable="true" styleClass="bottom-space">
-		<h1>
-			<ui:insert name="title">...</ui:insert>
-		</h1>
-	</p:panel>
+<!-- 	<p:panel toggleable="true" styleClass="bottom-space"> -->
+<!-- 		<h1> -->
+<!-- 			<ui:insert name="title">...</ui:insert> -->
+<!-- 		</h1> -->
+<!-- 	</p:panel> -->
 
 </ui:composition>
