Dodano tabele z danymi z bazy MySQL

--- a/src/main/webapp/templates/main-template.xhtml
+++ b/src/main/webapp/templates/main-template.xhtml
@@ -14,12 +14,12 @@
 	<h:outputStylesheet name="css/all.css" library="assets" />
 	<h:outputStylesheet name="all.css" library="assets" />
 	<h:outputStylesheet name="css/noscript.css" library="assets"/>
-	<h:outputScript library="assets" name="js/functions.js" />
+<!-- 	<h:outputScript library="assets" name="js/functions.js" /> -->
 
 		
 </h:head>
 
-<h:body>
+<h:body class="is-preload landing">
  
 	<div id="page-wrapper">
 	
@@ -34,6 +34,7 @@
 						<li><h:link value="Cennik" outcome="pricing" /></li>
 						<li><h:link value="Kontakt" outcome="contact" /></li>
 						<li><h:link value="Zaplanuj wizytę" outcome="reservation" /></li>
+						<li><h:link value="Wszystkie rezerwacje" outcome="all_reservations" /></li>
 						<li><h:link value="Zarejestruj się" outcome="register" class="button primary" /></li>
 						<li><h:link value="Zaloguj się" outcome="login" /></li>
 <!--                         <li><a href="{$conf->action_root}services">Usługi</a></li> -->
@@ -57,15 +58,15 @@
 			<!-- Footer -->
 			<div id="footer">
 				
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+<!-- 				<ul class="icons"> -->
+<!-- 					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
+<!-- 					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+<!-- 					<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
+<!-- 					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
+<!-- 					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li> -->
+<!-- 					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li> -->
 					
-				</ul>
+<!-- 				</ul> -->
 				<ul class="copyright">
 					<li>&copy; Piotr Herdzina. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
