--- a/src/main/webapp/templates/main-template.xhtml
+++ b/src/main/webapp/templates/main-template.xhtml
@@ -19,7 +19,7 @@
 		
 </h:head>
 
-<h:body class="is-preload landing">
+<h:body>
  
 	<div id="page-wrapper">
 	
@@ -37,13 +37,7 @@
 						<li><h:link value="Wszystkie rezerwacje" outcome="all_reservations" /></li>
 						<li><h:link value="Zarejestruj się" outcome="register" class="button primary" /></li>
 						<li><h:link value="Zaloguj się" outcome="login" /></li>
-<!--                         <li><a href="{$conf->action_root}services">Usługi</a></li> -->
-<!--                         <li><a href="{$conf->action_root}gallery">Galeria</a></li> -->
-<!--                         <li><a href="{$conf->action_root}pricing">Cennik</a></li> -->
-<!-- 						<li><a href="{$conf->action_root}contact">Kontakt</a></li> -->
-<!--                         <li><a href="{$conf->action_root}reservation">Zaplanuj wizytę</a></li> -->
-<!--                         <li><a href="{$conf->action_root}register" class="button primary">Zarejestruj się</a></li> -->
-<!--                         <li><a href="{$conf->action_root}login">Zaloguj się</a></li> -->
+               
 					</ul>
 				</nav>
 			</div>
@@ -58,7 +52,7 @@
 			<!-- Footer -->
 			<div id="footer">
 				
-<!-- 				<ul class="icons"> -->
+				<ul class="icons">
 <!-- 					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
 <!-- 					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 <!-- 					<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
@@ -66,7 +60,7 @@
 <!-- 					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li> -->
 <!-- 					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li> -->
 					
-<!-- 				</ul> -->
+				</ul>
 				<ul class="copyright">
 					<li>&copy; Piotr Herdzina. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
