--- a/src/main/webapp/templates/main-template-user.xhtml
+++ b/src/main/webapp/templates/main-template-user.xhtml
@@ -26,20 +26,15 @@
 		<!-- Header -->
 			<div id="header">
 				<h1 id="logo"><h:link value="Haircutter" outcome="/public/index" /></h1>
-				
 				<nav id="nav">
-				
 					<ul>
 						<li><h:link value="Strona główna" outcome="/public/index" /></li>
 						<li><h:link value="Usługi" outcome="/public/services" /></li>
-						<li><h:link value="Galeria" outcome="/public/gallery" /></li>
 						<li><h:link value="Cennik" outcome="/public/pricing" /></li>
 						<li><h:link value="Kontakt" outcome="/public/contact" /></li>
 						<li><h:link value="Zaplanuj wizytę" outcome="/pages/userPages/reservation" /></li>
-						<li><h:link value="Zarejestruj się" outcome="/public/register" class="button primary" /></li>
-						<li><h:link value="Zaloguj się " outcome="/public/login" /></li>
-						
-               
+						<li><h:link value="Moje rezerwacje" outcome="/pages/userPages/my_reservations" /></li>
+						<li><h:form><h:commandButton value="Wyloguj" action="#{loginBB.doLogout()}" /></h:form></li>
 					</ul>
 				</nav>
 			</div>
