Poprawki, dodanie kalendarza

--- a/src/main/webapp/templates/main-template-admin.xhtml
+++ b/src/main/webapp/templates/main-template-admin.xhtml
@@ -14,7 +14,11 @@
 	<h:outputStylesheet name="css/all.css" library="assets" />
 	<h:outputStylesheet name="all.css" library="assets" />
 	<h:outputStylesheet name="css/noscript.css" library="assets"/>
-<!-- 	<h:outputScript library="assets" name="js/functions.js" /> -->
+	<!-- DatePicker JavaScript & CSS -->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js" />
+	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" />
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+	<!-- 	<h:outputScript library="assets" name="js/functions.js" /> -->
 
 		
 </h:head>
@@ -64,14 +68,14 @@
 			</div>
 
 		<!-- Scripts -->
-			<h:outputScript library="assets" name="js/jquery.min.js" />
-			<h:outputScript library="assets" name="js/jquery.scrolly.min.js" />
-			<h:outputScript library="assets" name="js/jquery.dropotron.min.js" />
-			<h:outputScript library="assets" name="js/jquery.scrollex.min.js" />
-			<h:outputScript library="assets" name="js/browser.min.js" />
-			<h:outputScript library="assets" name="js/breakpoints.min.js" />
-			<h:outputScript library="assets" name="js/util.js" />
-			<h:outputScript library="assets" name="js/main.js" />
+<!-- 			<h:outputScript library="assets" name="js/jquery.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/jquery.scrolly.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/jquery.dropotron.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/jquery.scrollex.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/browser.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/breakpoints.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/util.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/main.js" /> -->
 			
 		
         </div>  
