--- a/src/main/webapp/templates/main-template.xhtml
+++ b/src/main/webapp/templates/main-template.xhtml
@@ -14,13 +14,14 @@
 	<h:outputStylesheet name="css/all.css" library="assets" />
 	<h:outputStylesheet name="all.css" library="assets" />
 	<h:outputStylesheet name="css/noscript.css" library="assets"/>
-<!-- 	<h:outputScript library="assets" name="js/functions.js" /> -->
+
+
 
 		
 </h:head>
 
 <h:body>
- 
+ 	
 	<div id="page-wrapper">
 	
 		<!-- Header -->
@@ -69,14 +70,14 @@
 			</div>
 
 		<!-- Scripts -->
-			<h:outputScript library="assets" name="js/jquery.min.js" />
-			<h:outputScript library="assets" name="js/jquery.scrolly.min.js" />
-			<h:outputScript library="assets" name="js/jquery.dropotron.min.js" />
-			<h:outputScript library="assets" name="js/jquery.scrollex.min.js" />
-			<h:outputScript library="assets" name="js/browser.min.js" />
-			<h:outputScript library="assets" name="js/breakpoints.min.js" />
-			<h:outputScript library="assets" name="js/util.js" />
-			<h:outputScript library="assets" name="js/main.js" />
+<!-- 			<h:outputScript library="assets" name="js/jquery.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/jquery.scrolly.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/jquery.dropotron.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/jquery.scrollex.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/browser.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/breakpoints.min.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/util.js" /> -->
+<!-- 			<h:outputScript library="assets" name="js/main.js" /> -->
 			
 		
         </div>  
