--- a/src/main/webapp/templates/main-template-user.xhtml
+++ b/src/main/webapp/templates/main-template-user.xhtml
@@ -65,14 +65,14 @@
 			</div>
 
 		<!-- Scripts -->
-<!-- 			<h:outputScript library="assets" name="js/jquery.min.js" /> -->
-<!-- 			<h:outputScript library="assets" name="js/jquery.scrolly.min.js" /> -->
-<!-- 			<h:outputScript library="assets" name="js/jquery.dropotron.min.js" /> -->
-<!-- 			<h:outputScript library="assets" name="js/jquery.scrollex.min.js" /> -->
-<!-- 			<h:outputScript library="assets" name="js/browser.min.js" /> -->
-<!-- 			<h:outputScript library="assets" name="js/breakpoints.min.js" /> -->
-<!-- 			<h:outputScript library="assets" name="js/util.js" /> -->
-<!-- 			<h:outputScript library="assets" name="js/main.js" /> -->
+			<h:outputScript library="assets" name="js/jquery.min.js" />
+			<h:outputScript library="assets" name="js/jquery.scrolly.min.js" />
+			<h:outputScript library="assets" name="js/jquery.dropotron.min.js" />
+			<h:outputScript library="assets" name="js/jquery.scrollex.min.js" />
+			<h:outputScript library="assets" name="js/browser.min.js" />
+			<h:outputScript library="assets" name="js/breakpoints.min.js" />
+			<h:outputScript library="assets" name="js/util.js" />
+			<h:outputScript library="assets" name="js/main.js" />
 			
 		
         </div>  
